Implemented button date picker through YUI calendar + some refactoring of renderer.php and locallib.php

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@
     margin-left:auto;
 }
 
+.path-mod-attforblock .attfiltercontrols #currentdate{
+    display: inline;
+}
+
 .path-mod-attforblock .attwidth {
     width:90%;
     margin: auto;
