Some refactoring for better using from attendance block

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@
     background-color: #EEEEEE;
     padding: 30px 10px;
 }
-.path-mod-attforblock table.list td.c0 {
+.path-mod-attforblock table.attlist td.c0 {
     text-align: right;
 }
 
