New 'select all' row of radio buttons on attendance page

--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,8 @@
 #page-mod-attendance-sessions input[type="checkbox"] {
     margin-right: 2px;
 }
+
+.path-mod-attendance .setallstatuses {
+    text-align: right;
+}
+
