--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@
     padding: 5px;
 }
 
+.path-mod-attendance .attdetailcheckbox {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
 .path-mod-attendance .attfiltercontrols {
     margin-bottom: 10px;
     margin-left:auto;
@@ -163,14 +168,6 @@
     color: red;
 }
 
-.path-mod-attendance .summaryreport .c5 {
-    background-color: #EAEAEA;
-}
-
-.path-mod-attendance .summaryreport .c6 {
-    background-color: #EAEAEA;
-}
-
-.path-mod-attendance .summaryreport .c7 {
+.path-mod-attendance .columncontrast {
     background-color: #EAEAEA;
 }
