Fix coding guideline stuff found by plugins db check.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .path-mod-attendance .attbtn {
-    border:1px solid #AAAAAA;
+    border: 1px solid #aaa;
     border-radius: 5px;
     margin-left: 2px;
     margin-right: 2px;
@@ -14,27 +14,27 @@
 
 .path-mod-attendance .attfiltercontrols {
     margin-bottom: 10px;
-    margin-left:auto;
-    margin-right:auto;
-    width:90%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
-.path-mod-attendance .attfiltercontrols #currentdate{
+.path-mod-attendance .attfiltercontrols #currentdate {
     display: inline;
 }
 
 .path-mod-attendance .attwidth {
     margin: auto;
-    width:90%;
+    width: 90%;
 }
 
 .path-mod-attendance .userwithoutenrol,
-.path-mod-attendance .userwithoutenrol a{
+.path-mod-attendance .userwithoutenrol a {
     color: gray;
 }
 
 .path-mod-attendance .userwithoutdata,
-.path-mod-attendance .userwithoutdata a{
+.path-mod-attendance .userwithoutdata a {
     color: red;
 }
 
@@ -43,8 +43,8 @@
 }
 
 .path-mod-attendance .takelist .userpicture {
-    margin:0 3px;
-    vertical-align:middle;
+    margin: 0 3px;
+    vertical-align: middle;
 }
 
 .path-mod-attendance .takegrid input {
@@ -74,14 +74,14 @@
 }
 /* for IE7*/
 .path-mod-attendance .filtercontrols td {
-    padding:6px;
+    padding: 6px;
 }
 
 .path-mod-attendance .takecontrols {
     margin: 0 auto 20px auto;
     width: 800px;
 }
-.path-mod-attendance .takecontrols table{
+.path-mod-attendance .takecontrols table {
     margin: 0 auto;
 }
 .path-mod-attendance .takecontrols .c0 {
@@ -99,11 +99,11 @@
 }
 
 .path-mod-attendance table.userinfobox {
-    border: 1px solid #EEEEEE;
+    border: 1px solid #eee;
     padding: 0;
 }
 .path-mod-attendance table.userinfobox td.left {
-    background-color: #EEEEEE;
+    background-color: #eee;
     padding: 30px 10px;
 }
 .path-mod-attendance table.attlist td.c0 {
@@ -152,11 +152,11 @@
 }
 
 .path-mod-attendance .attendancestatus-E {
-    color: #00AEE3;
+    color: #00aee3;
 }
 
 .path-mod-attendance .attendancestatus-L {
-    color: #F7931E;
+    color: #f7931e;
 }
 
 .path-mod-attendance .attendancestatus-A {
@@ -164,25 +164,25 @@
 }
 
 .path-mod-attendance .attreport .contrast {
-    background-color: #EAEAEA;
+    background-color: #eaeaea;
 }
 
 .path-mod-attendance .attreport .center {
-    text-align:center;
+    text-align: center;
 }
 
 .path-mod-attendance .attreport .left {
-    text-align:left;
+    text-align: left;
 }
 
 .path-mod-attendance .attreport .bottom {
-    vertical-align:bottom;
+    vertical-align: bottom;
 }
 
 .path-mod-attendance .attreport .nowrap {
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 .path-mod-attendance .attreport .narrow {
-    width:1px;
+    width: 1px;
 }
