Improve display of "all courses" user report - display as table also include links to specific course reports.

--- a/styles.css
+++ b/styles.css
@@ -192,3 +192,7 @@
 #page-mod-attendance-sessions .statusgroup .statusdesc {
     margin-right: 12px;
 }
+
+#page-mod-attendance-view .averageattendance {
+    font-weight: bold;
+}
