--- a/templates/attendance_password_icon.mustache
+++ b/templates/attendance_password_icon.mustache
@@ -10,9 +10,8 @@
         "linktext": "",
         "icon":{
             "attributes": [
-                {"name": "class", "value": "iconhelp"},
-                {"name": "src", "value": "../../../pix/help.svg"},
-                {"name": "alt", "value": "Help icon"}
+                {"name": "src", "value": "../pix/key.svg"},
+                {"name": "alt", "value": "Password icon"}
             ]
         }
     }
