--- a/styles.css
+++ b/styles.css
@@ -251,3 +251,18 @@
         display: none;
     }
 }
+
+#page-mod-attendance-report .attendancereporttable {
+    overflow-x: scroll;
+    overflow-y: visible;
+    padding: 0;
+    margin-left: 180px;
+}
+
+#page-mod-attendance-report .attendancereporttable .headcol {
+    position: absolute;
+    width: 200px;
+    left: 0;
+    top: auto;
+    border-top-width: 1px;
+}
