--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -1,3 +1,51 @@
+{{!
+    This file is part of Moodle - http://moodle.org/
+
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+    @template mod_attendance/mobile_view_page
+
+    The main page to view the attendance activity
+
+    Classes required for JS:
+    * None
+
+    Data attibutes required for JS:
+    * All data attributes are required
+
+    Context variables required for this template:
+    * attendance
+    * summary
+    * cmid
+
+    Example context (json):
+    {
+        "attendance": {
+            "id": "1",
+            "course": "2",
+            "name": "Class Attendance",
+            "intro": "Intro"
+        },
+        "summary": {
+            "numtakensessions": "1",
+            "pointssessionscompleted": "2",
+            "percentagesessionscompleted": "2"
+        },
+        "cmid": "25"
+    }
+}}
 {{=<% %>=}}
 <div>
     <core-course-module-description description="<% attendance.intro %>" component="mod_attendance" componentId="<% cmid %>"></core-course-module-description>
