Re-organise form handling so to avoid cache issues and improve UX

--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -49,6 +49,13 @@
 {{=<% %>=}}
 <div>
     <core-course-module-description description="<% attendance.intro %>" component="mod_attendance" componentId="<% cmid %>"></core-course-module-description>
+    <%#showmessage%>
+    <%#messages%>
+    <ion-item>
+        {{ 'plugin.mod_attendance.<% string %>' | translate }}
+    </ion-item>
+    <%/messages%>
+    <%/showmessage%>
     <%#sessions%>
     <ion-item>
         <h2><% time %></h2>
