--- a/templates/mobile_user_form.mustache
+++ b/templates/mobile_user_form.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_attendance/mobile_take_attendance
+    @template mod_attendance/mobile_user_form
 
     The page to take attendance
 
@@ -60,7 +60,7 @@
         </ion-item>
         <%/statuses%>
     </ion-list>
-    <button ion-button core-site-plugins-new-content component="mod_attendance" method="mobile_take_attendance" [args]="{cmid: <% cmid %>, courseid: <% courseid %>, sessid: <% sessid %>, status: status}">
+    <button ion-button core-site-plugins-new-content component="mod_attendance" method="mobile_view_activity" [args]="{cmid: <% cmid %>, courseid: <% courseid %>, sessid: <% sessid %>, status: status}">
         {{ 'plugin.mod_attendance.submitattendance' | translate }}
     </button>
     <%/showstatuses%>
