Improve css tags, and make sure messages wrap correctly.

--- a/templates/mobile_teacher_form.mustache
+++ b/templates/mobile_teacher_form.mustache
@@ -45,7 +45,7 @@
     }
 }}
 {{=<% %>=}}
-<div class="attendance_teacher_form">
+<div class="attendance_mobile_teacher_form">
     <span class="description">
     <core-course-module-description description="<% attendance.intro %>" component="mod_attendance" componentId="<% cmid %>"></core-course-module-description>
     </span>
