--- a/templates/mobile_user_form.mustache
+++ b/templates/mobile_user_form.mustache
@@ -44,13 +44,15 @@
     }
 }}
 {{=<% %>=}}
-<div>
+<div class="attendance_mobile_user_form">
     <core-course-module-description description="<% attendance.intro %>" component="mod_attendance" componentId="<% cmid %>"></core-course-module-description>
     <%#showmessage%>
         <%#messages%>
-            <ion-item>
-                {{ 'plugin.mod_attendance.<% string %>' | translate }}
-            </ion-item>
+            <span class="messages">
+                <ion-item>
+                    {{ 'plugin.mod_attendance.<% string %>' | translate }}
+                </ion-item>
+            </span>
         <%/messages%>
     <%/showmessage%>
     <%#showpassword%>
