--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@
 #page-mod-attendance-report .attendancereporttable .headcol {
     position: absolute;
     width: 200px;
-    left: 0;
+    left: 10px;
     top: auto;
     border-top-width: 1px;
 }
@@ -269,4 +269,27 @@
 #page-mod-attendance-report .attendancereporttable .headcol input[type='checkbox'] {
     margin-right: 4px;
 
+}
+
+.attendancereporttable img.icon{
+    padding-left:5px;
+}
+
+/* CSS for old clean based themes with docks etc. */
+#page-mod-attendance-report.has-region-side-pre .attendancereporttable .headcol {
+    left: 370px;
+}
+
+#page-mod-attendance-report.has-region-side-pre .attendancereporttable {
+    margin-left: 230px;
+}
+
+#page-mod-attendance-report.has-region-side-pre.content-only .attendancereporttable .headcol {
+    left: 80px;
+}
+
+@media (max-width: 767px) {
+    #page-mod-attendance-report.has-region-side-pre .attendancereporttable .headcol {
+        left: 80px;
+    }
 }
