--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
-/*    width: 90%; */
 }
 
 .path-mod-attendance .attfiltercontrols #currentdate {
@@ -117,7 +116,7 @@
     text-align: right;
 }
 .path-mod-attendance table.allsessions tr.grouper td {
-    background-color: #eeeeee;
+    background-color: #eee;
 }
 .path-mod-attendance table.allsessions td.groupheading {
     font-weight: bold;
