--- a/templates/rooms.mustache
+++ b/templates/rooms.mustache
@@ -16,8 +16,33 @@
 }}
 {{!
     @template mod_attendance/rooms
+
+    Example context (json):
+    {
+        "name": "Room name",
+        "description": "Room description",
+        "capacity": "Room capacity",
+        "bookable": "Room bookable",
+        "rooms": [
+         {
+            "name": "Example room 1",
+            "description": "This is my example room",
+            "capacity": 10,
+            "is_bookable": 1,
+         },
+         {
+            "name": "Example room 2",
+            "description": "Yet another room"",
+            "capacity": 5,
+            "is_bookable": 0,
+         }
+        ],
+        "button_addroom": "Add room",
+        "url_add": "https://www.example.com",
+
+    }
 }}
-<table class="generaltable" width="100%">
+<table class="generaltable" style="width: 100%">
     <thead>
     <tr>
         <th>{{name}}</th>
@@ -42,8 +67,4 @@
     {{/rooms}}
     </tbody>
 </table>
-<p><ul>
-
-</ul></p>
-
 <input type="button" class="btn btn-primary" onclick="location.href='{{url_add}}'" value="{{button_addroom}}" />
