--- a/templates/rooms.mustache
+++ b/templates/rooms.mustache
@@ -19,27 +19,26 @@
 
     Example context (json):
     {
-        "name": "Room name",
-        "description": "Room description",
-        "capacity": "Room capacity",
-        "bookable": "Room bookable",
-        "rooms": [
-         {
-            "name": "Example room 1",
-            "description": "This is my example room",
-            "capacity": 10,
-            "is_bookable": 1,
-         },
-         {
-            "name": "Example room 2",
-            "description": "Yet another room"",
-            "capacity": 5,
-            "is_bookable": 0,
-         }
-        ],
-        "button_addroom": "Add room",
-        "url_add": "https://www.example.com",
-
+      "name": "Room name",
+      "description": "Room description",
+      "capacity": "Room capacity",
+      "bookable": "Room bookable",
+      "rooms": [
+        {
+          "name": "Example room 1",
+          "description": "This is my example room",
+          "capacity": 10,
+          "is_bookable": 1
+        },
+        {
+          "name": "Example room 2",
+          "description": "Yet another room",
+          "capacity": 5,
+          "is_bookable": 0
+        }
+      ],
+      "button_addroom": "Add room",
+      "url_add": "https://www.example.com"
     }
 }}
 <table class="generaltable" style="width: 100%">
